# furia-plugin-example

./: .clippy.toml  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md
src/: lib.rs  main.rs
tests/: integration.rs
