[package]
license = "MIT"
name = "furia-plugin-example"
version = "0.1.0"
edition = "2021"
description = "Example: a minimal third-party C2 module implementing SimulationProvider"

[dependencies]
furia-sdk = { git = "https://github.com/vlordier/furia-core.git", tag = "v0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }