[package]
license = "MIT"
name = "furia-plugin-example"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Example: a minimal third-party C2 module implementing SimulationProvider"

[dependencies]
furia-sdk = { git = "https://github.com/vlordier/furia-core.git", tag = "v0.1.0" }
furia-platform = { git = "https://github.com/vlordier/furia-core.git", tag = "v0.1.0" }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
